# sms_notifier

./: .gitignore  README.md  dev_setup.py  pixi.toml  pyproject.toml  twilio_curl.sh
client/: LICENSE  README.md  pyproject.toml
client/sms_client/: __init__.py  cli.py  sms_api_caller.py
server/: .dockerignore  .env.example  DOCKER_README.md  Dockerfile  docker-compose.yml  gunicorn.conf.py  logging.conf  nginx.conf  pyproject.toml  requirements.txt  sms_notifier.py
server/blueprints/: auth.py  sms.py
server/src/: challenge.py  logging_config.py
tests/: test_rsa_auth.py
