[project]
name = "sms-notifier-dev-setup"
version = "0.1.0"
description = "Development setup for SMS Notifier"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=3.4.0",
]

[project.scripts]
dev-setup = "dev_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
