[project]
name = "sms-notifier-server"
version = "0.1.0"
description = "SMS Notifier Server with Public Key Authentication"
authors = [
    {name = "Ethan J Armand", email = "earmand@ucsd.edu"}
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.0.0",
    "gunicorn>=20.1.0",
    "twilio>=7.0.0",
    "cryptography>=3.4.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-flask>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blueprints", "src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
